--- a/QuickFitness/app/src/main/res/layout/activity_login.xml
+++ b/QuickFitness/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.006"
+        app:layout_constraintVertical_bias="0.001"
         app:srcCompat="@mipmap/ic_launcher_foreground" />
 
     <TextView
@@ -35,7 +35,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginLogo"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.138" />
 
     <TextView
         android:id="@+id/username"
@@ -47,8 +47,8 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.258"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/putUsername"
         app:layout_constraintTop_toBottomOf="@+id/quickFitnessTitle"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -79,7 +79,7 @@
         app:layout_constraintTop_toBottomOf="@+id/putPassword"
         app:layout_constraintVertical_bias="0.0" />
 
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/putPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -89,21 +89,30 @@
         android:hint="@string/insert_password"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
-        android:password="true"
         android:textColor="@color/black"
         android:textColorHint="@color/grey"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/grey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.439"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
         app:layout_constraintVertical_bias="0.0"
-        tools:ignore="TextFields" />
+        tools:ignore="TextFields" >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="236dp"
+            android:layout_height="34dp"
+            android:ems="10"
+            android:inputType="textPassword" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <EditText
         android:id="@+id/putUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="236dp"
+        android:layout_height="34dp"
         android:layout_marginTop="16dp"
         android:background="@color/white"
         android:ems="10"
@@ -113,9 +122,9 @@
         android:textColor="@color/black"
         android:textColorHint="@color/grey"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.439"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/putPassword"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/putPassword"
         app:layout_constraintTop_toBottomOf="@+id/username"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -129,7 +138,7 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.256"
+        app:layout_constraintHorizontal_bias="0.232"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/putUsername"
         app:layout_constraintVertical_bias="0.0" />
