--- a/QuickFitness/app/src/main/res/layout/activity_login.xml
+++ b/QuickFitness/app/src/main/res/layout/activity_login.xml
@@ -17,15 +17,14 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.001"
-        app:srcCompat="@mipmap/ic_launcher_foreground" />
+        app:layout_constraintVertical_bias="0.006"
+        app:srcCompat="@mipmap/ic_launcher_foreground"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/quickFitnessTitle"
         android:layout_width="183dp"
         android:layout_height="40dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="592dp"
         android:text="@string/app_name"
         android:textAlignment="center"
         android:textColor="@color/white"
@@ -34,8 +33,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginLogo"
-        app:layout_constraintVertical_bias="0.138" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.282" />
 
     <TextView
         android:id="@+id/username"
@@ -47,8 +46,8 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/putUsername"
+        app:layout_constraintHorizontal_bias="0.258"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quickFitnessTitle"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -79,7 +78,7 @@
         app:layout_constraintTop_toBottomOf="@+id/putPassword"
         app:layout_constraintVertical_bias="0.0" />
 
-    <com.google.android.material.textfield.TextInputLayout
+    <EditText
         android:id="@+id/putPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -88,31 +87,21 @@
         android:ems="10"
         android:hint="@string/insert_password"
         android:importantForAutofill="no"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/grey"
-        app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/grey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.439"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
         app:layout_constraintVertical_bias="0.0"
-        tools:ignore="TextFields" >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="236dp"
-            android:layout_height="34dp"
-            android:ems="10"
-            android:inputType="textPassword" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        tools:ignore="TextFields" />
 
     <EditText
         android:id="@+id/putUsername"
-        android:layout_width="236dp"
-        android:layout_height="34dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@color/white"
         android:ems="10"
@@ -122,11 +111,27 @@
         android:textColor="@color/black"
         android:textColorHint="@color/grey"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/putPassword"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/putPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.439"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0">
+    </EditText>
+
+    <ImageButton
+        android:id="@+id/showPasswordButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#00FFFFFF"
+        android:clickable="true"
+        android:contentDescription="@string/showpassword"
+        android:src="@drawable/icon_eye"
+        android:tint="@color/grey"
+        app:layout_constraintBottom_toBottomOf="@+id/putPassword"
+        app:layout_constraintEnd_toEndOf="@+id/putPassword"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/putPassword"
+        app:layout_constraintTop_toTopOf="@+id/putPassword" />
 
     <TextView
         android:id="@+id/password"
@@ -138,7 +143,7 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.232"
+        app:layout_constraintHorizontal_bias="0.256"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/putUsername"
         app:layout_constraintVertical_bias="0.0" />
