--- a/QuickFitness/app/src/main/res/layout/activity_exercise.xml
+++ b/QuickFitness/app/src/main/res/layout/activity_exercise.xml
@@ -10,7 +10,7 @@
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomExerciseAppBar"
         style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
-        android:layout_width="392dp"
+        android:layout_width="match_parent"
         android:layout_height="76dp"
         android:layout_gravity="bottom"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,7 +23,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/exerciseTopToolBar"
-        android:layout_width="394dp"
+        android:layout_width="match_parent"
         android:layout_height="73dp"
         android:background="@color/teal"
         android:minHeight="?attr/actionBarSize"
