--- a/QuickFitness/app/src/main/res/layout/fragment_profile.xml
+++ b/QuickFitness/app/src/main/res/layout/fragment_profile.xml
@@ -13,8 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="92dp"
         android:layout_marginEnd="36dp"
+        android:backgroundTint="@color/purple"
         android:drawableEnd="@drawable/ic_edit"
         android:text="@string/edit_profile"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,8 +25,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:backgroundTint="@color/purple"
         android:drawableEnd="@drawable/ic_settings"
         android:text="@string/settings"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/editProfileButton"
         app:layout_constraintHorizontal_bias="0.56"
         app:layout_constraintStart_toStartOf="@+id/editProfileButton"
@@ -72,7 +76,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:backgroundTint="@color/purple"
         android:text="@string/logout"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.765"
         app:layout_constraintStart_toStartOf="parent"
