--- a/QuickFitness/app/src/main/res/layout/activity_login.xml
+++ b/QuickFitness/app/src/main/res/layout/activity_login.xml
@@ -41,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="76dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/login_name"
         android:textColor="@color/white"
         android:textSize="18sp"
@@ -140,6 +141,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/login_password"
         android:textColor="@color/white"
         android:textSize="18sp"
