--- a/QuickFitness/app/src/main/res/layout/fragment_create_account.xml
+++ b/QuickFitness/app/src/main/res/layout/fragment_create_account.xml
@@ -5,7 +5,8 @@
     android:id="@+id/fragment_create_account"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_accent">
+    android:background="@color/purple_accent"
+    tools:context=".CreateAccountFragment">
 
     <ImageView
         android:id="@+id/loginLogo"
@@ -141,5 +142,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/putPassword"
         app:layout_constraintVertical_bias="0.146" />
+
+    <ImageButton
+        android:id="@+id/backToLoginButton"
+        android:layout_width="57dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="67dp"
+        android:background="#00FFFFFF"
+        android:backgroundTint="#00FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/loginLogo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.005"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/icon_left_arrow_white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
