--- a/QuickFitness/app/src/main/res/layout/activity_login.xml
+++ b/QuickFitness/app/src/main/res/layout/activity_login.xml
@@ -23,18 +23,18 @@
 
     <TextView
         android:id="@+id/quickFitnessTitle"
-        android:layout_width="183dp"
-        android:layout_height="40dp"
+        android:layout_width="255dp"
+        android:layout_height="60dp"
         android:text="@string/app_name"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.282" />
+        app:layout_constraintVertical_bias="0.283" />
 
     <TextView
         android:id="@+id/username"
@@ -83,8 +83,8 @@
 
     <EditText
         android:id="@+id/putPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="224dp"
+        android:layout_height="27dp"
         android:layout_marginTop="12dp"
         android:background="@color/white"
         android:ems="10"
@@ -103,8 +103,8 @@
 
     <EditText
         android:id="@+id/putUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="220dp"
+        android:layout_height="29dp"
         android:layout_marginTop="16dp"
         android:background="@color/white"
         android:ems="10"
@@ -118,8 +118,7 @@
         app:layout_constraintHorizontal_bias="0.439"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username"
-        app:layout_constraintVertical_bias="0.0">
-    </EditText>
+        app:layout_constraintVertical_bias="0.0"></EditText>
 
     <ImageButton
         android:id="@+id/showPasswordButton"
