--- a/QuickFitness/app/src/main/res/layout/fragment_create_account.xml
+++ b/QuickFitness/app/src/main/res/layout/fragment_create_account.xml
@@ -10,14 +10,14 @@
 
     <ImageView
         android:id="@+id/loginLogo"
-        android:layout_width="145dp"
-        android:layout_height="127dp"
+        android:layout_width="176dp"
+        android:layout_height="174dp"
         android:layout_marginTop="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.093"
+        app:layout_constraintVertical_bias="0.022"
         app:srcCompat="@mipmap/ic_launcher_foreground"
         tools:ignore="ContentDescription" />
 
@@ -25,7 +25,7 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="200dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/create_account_title"
         android:textColor="#FFFFFF"
@@ -38,8 +38,8 @@
     <EditText
         android:id="@+id/putName"
         android:layout_width="141dp"
-        android:layout_height="45dp"
-        android:layout_marginBottom="428dp"
+        android:layout_height="29dp"
+        android:layout_marginTop="32dp"
         android:background="@color/white"
         android:ems="10"
         android:gravity="center_vertical"
@@ -48,18 +48,16 @@
         android:inputType="textPersonName"
         android:textColor="@color/black"
         android:textColorHint="@color/grey"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.186"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:layout_constraintVertical_bias="0.842" />
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <EditText
         android:id="@+id/putLastName"
         android:layout_width="141dp"
-        android:layout_height="45dp"
-        android:layout_marginBottom="428dp"
+        android:layout_height="29dp"
+        android:layout_marginTop="32dp"
         android:background="@color/white"
         android:ems="10"
         android:gravity="center_vertical"
@@ -68,18 +66,16 @@
         android:inputType="textPersonName"
         android:textColor="@color/black"
         android:textColorHint="@color/grey"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.809"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:layout_constraintVertical_bias="0.842" />
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <EditText
         android:id="@+id/putUsername"
         android:layout_width="298dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="124dp"
+        android:layout_height="29dp"
+        android:layout_marginTop="84dp"
         android:background="@color/white"
         android:ems="10"
         android:gravity="center_vertical"
@@ -96,7 +92,7 @@
     <EditText
         android:id="@+id/putEmail"
         android:layout_width="298dp"
-        android:layout_height="46dp"
+        android:layout_height="29dp"
         android:layout_marginTop="16dp"
         android:background="@color/white"
         android:ems="10"
@@ -114,8 +110,8 @@
     <EditText
         android:id="@+id/putPassword"
         android:layout_width="298dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="220dp"
+        android:layout_height="29dp"
+        android:layout_marginTop="20dp"
         android:background="@color/white"
         android:ems="10"
         android:hint="@string/password"
@@ -123,12 +119,10 @@
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/grey"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/putEmail"
-        app:layout_constraintVertical_bias="0.344"
         tools:ignore="TextFields" />
 
     <Button
@@ -141,7 +135,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/putPassword"
-        app:layout_constraintVertical_bias="0.146" />
+        app:layout_constraintVertical_bias="0.108" />
 
     <ImageButton
         android:id="@+id/backToLoginButton"
