--- a/QuickFitness/app/src/main/res/layout/fragment_routine_detail.xml
+++ b/QuickFitness/app/src/main/res/layout/fragment_routine_detail.xml
@@ -39,7 +39,6 @@
         android:src="@drawable/icon_left_arrow_black"
         android:tint="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/detailRoutineToolbar"
-        app:layout_constraintEnd_toStartOf="@+id/routineName"
         app:layout_constraintHorizontal_bias="0.017"
         app:layout_constraintStart_toStartOf="@+id/detailRoutineToolbar"
         app:layout_constraintTop_toTopOf="parent"
@@ -61,14 +60,15 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingStartButton"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:src="@drawable/ic_play"
+        app:borderWidth="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.954"
         app:layout_constraintStart_toStartOf="parent"
-        app:borderWidth="0dp"
-        android:layout_height="wrap_content" />
+        app:rippleColor="@color/white" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
